<resources>
    <string name="app_name">PJ Notification</string>
    <string name="title_activity_main">PJ Notification</string>
    <string name="logo">logo</string>
    <string name="studentId">학번</string>
    <string name="password">비밀번호</string>
    <string name="logIn">로그인</string>
    <string name="rememberId">아이디 저장</string>
    <string name="rememberPassword">비밀번호 저장</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
