<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@android:color/background_light">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:background="@android:color/background_light"
            android:contentDescription="@string/logo"
            android:scaleType="fitXY"
            android:src="@drawable/login_title"
            app:srcCompat="@drawable/login_title" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:background="@android:color/background_light">

        <EditText
            android:id="@+id/idInput"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edittextborder"
            android:hint="@string/studentId"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/idInput"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextborder"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:targetApi="o" />


        <Button
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_below="@+id/passwordInput"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/loginbuttonborder"
            android:onClick="loginButtonClicked"
            android:text="@string/logIn"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/idCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:layout_alignStart="@id/loginButton"
            android:layout_marginTop="10dp"
            android:text="@string/rememberId" />

        <CheckBox
            android:id="@+id/pwCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/idCheckBox"
            android:text="@string/rememberPassword" />

    </RelativeLayout>
</LinearLayout>